criando client de produtos e enriquencendo response com dados de produtos